# adventOfCode

./: .gitignore  .gitmodules  2  Makefile  Readme.md
2021/: Makefile  run
2021/data/: input_day04.txt  input_day06_example.txt
2021/src/: common.h  day03.py  day06.c  day09.c  day12.c  day17.py  day18.py
2021/tasks/: day02.md  day03.md  day04.md  day06.md  day08.md  day10.md  day11.md  day17.md  day18.md  day21.md
2022/: Makefile  run  test
2022/src/: advent.h  day01.c  day01.ml  day02.c  day02.ml  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  day10.c  day11.c  day12.c  day13.c  day14.c
2023/: Makefile
2023/data/: day06.txt  day11.txt
2023/src/: advent.h  adventviz.h  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day06.py  day07.c  day08.c  day09.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  reload.c  viz.c
2024/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  dev.sh
2024/data/: day03.txt  day04.txt  day06.txt  day07.txt  day08.txt  day12.txt  day14.txt  day15.txt  day17.txt  day21.txt  day22.txt  day24.txt
2024/src/: advent.hpp  day01.cpp  day01.ml  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  demo.cpp  gday14.cpp
2025/: CMakeLists.txt
2025/data/: day02.txt  day04.txt  day06.txt  day06e.txt  day07.txt  day09.txt  day10.txt  day11.txt
2025/src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp
everybodyCodes/2025/: .gitignore  CMakeLists.txt  Makefile  compile_flags.txt
everybodyCodes/2025/data/: 2025_q01_p1.txt  2025_q01_p2.txt  2025_q02_p2.txt  everybody_codes_e2025_q01_p3.txt  everybody_codes_e2025_q02_p1.txt
everybodyCodes/2025/src/: day01.cpp  day02.cpp
src/: common.h  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  day10.c  day11.c  day13.c  day14.py  day15.py  day16.py  day17.py  day18.py  day20.py  day21.cpp  day22.cpp  gui.c  input_day01.c
tasks/: day01.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day20.md  day21.md  day22.md
